# CineReads-main

./: CineReadsAI.md  Jenkinsfile  docker-compose.yml  pytest.ini
backend/: Dockerfile  requirements.txt  setup.cfg  test_hardcover.py
backend/app/: config.py  main.py
frontend/: Dockerfile  next.config.ts
frontend/src/app/: layout.tsx
frontend/src/service/: tmdb.ts
infra/: bootstrap_terraform.sh.bak  fix_terraform_files.sh
infra/ansible/: hosts.ini  provision_jenkins.yml
infra/terraform/: .terraform.lock.hcl  cloudwatch.tf  ecr.tf  ecr_lifecycle.tf  iam.tf  instance_scheduler.tf  jenkins_ec2.tf  lambda_stop.py  outputs.tf  outputs.tf.bak.1760614606  providers.tf  s3.tf  secrets.auto.tfvars  terraform.tfstate  terraform.tfstate.backup  tf_outputs.json  tfplan  variables.tf  vpc.tf
infra/terraform/.terraform/modules/: modules.json
infra/terraform/.terraform/providers/registry.terraform.io/hashicorp/archive/2.7.1/: linux_amd64
infra/terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/6.16.0/: linux_amd64
infra/terraform/.terraform/providers/registry.terraform.io/hashicorp/cloudinit/2.3.7/: linux_amd64
infra/terraform/.terraform/providers/registry.terraform.io/hashicorp/null/3.2.4/: linux_amd64
infra/terraform/.terraform/providers/registry.terraform.io/hashicorp/random/3.7.2/: linux_amd64
infra/terraform_backup_1760614466/: cloudwatch.tf  ecr.tf  eks.tf  iam.tf  jenkins_ec2.tf  outputs.tf  providers.tf  s3.tf  variables.tf  vpc.tf
infra/terraform_disabled/: budget.tf  eks.tf
(+2 files in other folders)
