[metadata]
name = cinereads-backend
version = 0.0.1
description = CineReads backend package
author = You
author_email = you@example.com

[options]
packages = find:
python_requires = >=3.8
install_requires =
    httpx
    httpx[http2]
    requests
    boto3
    aiohttp

[options.packages.find]
where = .
exclude =
    tests*

# added pydantic deps
install_requires =
    httpx
    httpx[http2]
    requests
    boto3
    aiohttp
    pydantic
    pydantic-settings
